# marovi

./: .cursorignore  .cursorrules  .env.example  .gitignore  LICENSE  Makefile  README.md  TESTING.md  codex.md  polib.py  pyproject.toml
config/: proxy_server.yaml
docs/: cursor.md
examples/: README.md  po_translation_example.py
marovi/: config.py
marovi/api/: __init__.py  config.py  litellm_gateway.py  llm.py  provider_registry.py  router.py  server.py  translation.py
marovi/api/clients/: custom.py  llm.py  translation.py
marovi/api/core/: base.py  client.py  container.py  exceptions.py  metrics.py  router.py  validation.py
marovi/api/custom/: README.md  __init__.py  llm_one_shot_translator.py
marovi/api/providers/: __init__.py  anthropic.py  base.py  custom.py  deepl.py  google.py  google_rest.py  litellm.py  openai.py  provider_registry.py  registry.yaml
marovi/api/schemas/: __init__.py  base.py  llm.py  translation.py
marovi/api/utils/: auth.py  cache.py  logging.py  (+1 more)
marovi/pipelines/: __init__.py  arxiv_to_wiki.py  context.py  core.py  po_translation.py  steps.py
marovi/tests/: test_arxiv_to_wiki.py  test_config.py  test_pipeline_context.py  test_pipeline_core.py  test_pipeline_steps.py  test_po_parser.py  test_translation_gateway.py  test_wiki_client.py
pipelines/: README.md  __init__.py  po_translation.py  po_translation_pipeline.py
pipelines/runs/: __init__.py  po_translation.py
pipelines/utils/: __init__.py  base.py  cli.py  runner.py
tutorials/: api.ipynb  api.py  arxiv_to_wiki.ipynb  llm_one_shot_translator_test.py  pipelines.ipynb
(+39 files in other folders)
